# Kode-cli-rust

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOALS.md  LICENSE  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  TECH_STACK.md  TODO.md  WORKFLOW.md  clippy.toml  package.json  pnpm-lock.yaml  rustfmt.toml
.claude/: settings.local.json
.factory/commands/: git-commit.md  openspec-apply.md  openspec-archive.md  openspec-priority.md  openspec-proposal.md  openspec-update-priority.md
.factory/droids/: QUICKSTART.md  README.md  spec-comparer.md
crates/kode-cli/: Cargo.toml
crates/kode-cli/src/: main.rs
crates/kode-core/: Cargo.toml
crates/kode-core/src/: error.rs  lib.rs
crates/kode-core/src/agent/: loader.rs  mod.rs  storage.rs  types.rs
crates/kode-core/src/config/: api.rs  cli.rs  env.rs  gpt5.rs  loader.rs  mcp.rs  migration.rs  mod.rs  model.rs  types.rs  utils.rs
crates/kode-core/src/context/: freshness.rs  manager.rs  mod.rs
crates/kode-core/src/message/: mod.rs  types.rs
crates/kode-core/src/model/: adapter.rs  mod.rs  streaming.rs  types.rs
crates/kode-services/: Cargo.toml
crates/kode-services/src/: lib.rs
crates/kode-tools/: Cargo.toml
crates/kode-tools/src/: lib.rs  registry.rs  tool.rs
crates/kode-ui/: Cargo.toml
crates/kode-ui/src/: lib.rs
openspec/: AGENTS.md  PRIORITIES_INTEGRATION.md  SPEC_PRIORITIES.md  project.md
openspec/changes/archive/2024-12-24-implement-config-loading/implement-config-loading/: tasks.md
openspec/changes/archive/2025-12-24-implement-agent-system/: tasks.md  typescript-comparison.md
openspec/changes/archive/2025-12-24-implement-message-model/: tasks.md
openspec/changes/archive/2025-12-25-implement-context-management/: proposal.md  tasks.md
openspec/changes/implement-agent-system/: proposal.md
openspec/changes/implement-agent-system/specs/agent-system/: spec.md
openspec/changes/implement-anthropic-service/: proposal.md  tasks.md
openspec/changes/implement-anthropic-service/specs/anthropic-service/: spec.md
openspec/changes/implement-bash-tool/: proposal.md  tasks.md
openspec/changes/implement-bash-tool/specs/tool-system/: spec.md
openspec/changes/implement-basic-cli/: proposal.md  tasks.md
openspec/changes/implement-basic-cli/specs/cli-commands/: spec.md
openspec/changes/implement-cicd/: proposal.md
openspec/changes/implement-cicd/specs/README/: spec.md
openspec/changes/implement-cli-commands-full/: proposal.md
openspec/changes/implement-cli-commands-full/specs/cli-commands/: spec.md
openspec/changes/implement-comprehensive-tests/: proposal.md
openspec/changes/implement-comprehensive-tests/specs/config-loading/: spec.md
openspec/changes/implement-config-loading/: proposal.md  tasks.md
openspec/changes/implement-config-loading/analysis/: config-api-reference.md  typescript-config-system.md
openspec/changes/implement-context-management/: tasks.md
openspec/changes/implement-context-management/specs/message-model/: spec.md
openspec/changes/implement-cross-platform/: proposal.md
openspec/changes/implement-cross-platform/specs/config-loading/: spec.md
openspec/changes/implement-documentation/: proposal.md
openspec/changes/implement-documentation/specs/README/: spec.md
openspec/changes/implement-file-tools/: proposal.md  tasks.md
openspec/changes/implement-file-tools/specs/tool-system/: spec.md
openspec/changes/implement-mcp-client/: proposal.md
openspec/changes/implement-mcp-client/specs/mcp-integration/: spec.md
openspec/changes/implement-mcp-full/: proposal.md
openspec/changes/implement-mcp-full/specs/mcp-integration/: spec.md
openspec/changes/implement-message-model/: proposal.md  tasks.md
openspec/changes/implement-message-model/specs/message-model/: spec.md
openspec/changes/implement-model-switching/: proposal.md  tasks.md
openspec/changes/implement-model-switching/specs/message-model/: spec.md
openspec/changes/implement-openai-service/: proposal.md
openspec/changes/implement-openai-service/specs/anthropic-service/: spec.md
openspec/changes/implement-performance-optimization/: proposal.md
openspec/changes/implement-performance-optimization/specs/tool-system/: spec.md
openspec/changes/implement-permission-system/: proposal.md
openspec/changes/implement-permission-system/specs/tui-interface/: spec.md
openspec/changes/implement-search-tools/: proposal.md
openspec/changes/implement-search-tools/specs/tool-system/: spec.md
openspec/changes/implement-streaming-response/: proposal.md
openspec/changes/implement-streaming-response/specs/message-model/: spec.md
openspec/changes/implement-task-tool/: proposal.md
openspec/changes/implement-task-tool/specs/tool-system/: spec.md
openspec/changes/implement-tui-interface/: proposal.md
openspec/changes/implement-tui-interface/specs/tui-interface/: spec.md
openspec/changes/implement-ui-enhancements/: proposal.md
openspec/changes/implement-ui-enhancements/specs/tui-interface/: spec.md
openspec/changes/migrate-docs-to-specs/: design.md  proposal.md  tasks.md
openspec/changes/migrate-docs-to-specs/specs/agent-system/: spec.md
openspec/changes/migrate-docs-to-specs/specs/anthropic-service/: spec.md
openspec/changes/migrate-docs-to-specs/specs/cli-commands/: spec.md
openspec/changes/migrate-docs-to-specs/specs/config-loading/: spec.md
openspec/changes/migrate-docs-to-specs/specs/context-management/: spec.md
openspec/changes/migrate-docs-to-specs/specs/mcp-integration/: spec.md
openspec/changes/migrate-docs-to-specs/specs/message-model/: spec.md
openspec/changes/prepare-release-v0.1.0/: proposal.md
openspec/specs/agent-system/: design.md  spec.md
openspec/specs/anthropic-service/: design.md  spec.md
openspec/specs/cli-commands/: design.md  spec.md
openspec/specs/config-loading/: design.md  spec.md
openspec/specs/mcp-integration/: design.md  spec.md
openspec/specs/message-model/: design.md  spec.md
openspec/specs/tool-system/: design.md  spec.md
openspec/specs/tui-interface/: design.md  spec.md
(+8 files in other folders)
