[workspace]
members = [
    "crates/kode-core",
    "crates/kode-tools",
    "crates/kode-services",
    "crates/kode-ui",
    "crates/kode-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ShareAI-lab <ai-lab@foxmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/shareAI-lab/kode-cli-rust"
homepage = "https://github.com/shareAI-lab/kode-cli-rust"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# TUI
ratatui = "0.28"
crossterm = "0.27"
tui-input = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
directories = "5.0"
dirs = "5.0"
toml = "0.8"

# File operations
glob = "0.3"
walkdir = "2.4"
ignore = "0.4"

# Parsing
pulldown-cmark = "0.11"
yaml-rust2 = "0.8"
regex = "1.10"

# Caching
lru = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"
once_cell = "1.19"

# Testing
tempfile = "3.0"

# Syntax highlighting
syntect = "5.1"

# Internal crates
kode-core = { path = "crates/kode-core" }
kode-tools = { path = "crates/kode-tools" }
kode-services = { path = "crates/kode-services" }
kode-ui = { path = "crates/kode-ui" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
