[package]
name = "kode-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kode"
path = "src/main.rs"

[dependencies]
# Internal crates
kode-core = { workspace = true }
kode-tools = { workspace = true }
kode-services = { workspace = true }
kode-ui = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
