[package]
name = "kode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
directories = { workspace = true }
dirs = { workspace = true }

# Parsing
pulldown-cmark = { workspace = true }
yaml-rust2 = { workspace = true }

# Caching
lru = { workspace = true }

# Utilities
chrono = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
thiserror = { workspace = true }
tempfile = { workspace = true }
serial_test = "3.1"
